Fix image gap
Image to block

--- a/src/components/Post/index.module.scss
+++ b/src/components/Post/index.module.scss
@@ -5,9 +5,13 @@
     gap: 0.25rem;
     background-color: #fefefe;
 
-    &Image {
+    &ImageContainer {
       position: relative;
       padding: 0rem;
+
+      &Image {
+        display: block;
+      }
     }
 
     &Details {
